@@ -1,0 +1,37 @@
+# Copyright (C) 2013 Free Software Foundation, Inc.
+#
+# This program is free software; you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation; either version 3 of the License, or
+# (at your option) any later version.
+#
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with this program.  If not, see <http://www.gnu.org/licenses/>.
+
+if { ![istarget "arm*-*-*"] } {
+    verbose "Skipping ${testfile}."
+    return
+}
+
+standard_testfile
+
+# We need to load the text segment in a high address.  This is because
+# the bug we are dealing with happened when GDB sign-extended the PC
+# on ARM, causing the PC to acquire a wrong value.  That's why we use
+# the "-Wl,-Ttext-segment" option compile the binary.
+
+if { [prepare_for_testing ${testfile}.exp ${testfile} ${srcfile} \
+    [list debug ldflags=-Wl,-Ttext-segment=0xb0000000]] } {
+    return -1
+}
+
+if { ![runto_main] } {
+    return -1
+}
+
+gdb_test "next" "\[0-9\]+\\s+return 0;"
