@@ -1,3 +1,8 @@
+2013-04-25  Sergio Durigan Junior  <sergiodj@redhat.com>
+
+	* arm-tdep.c (BranchDest): Cast result as "unsigned long",
+	instead of "long".
+
 2013-04-25  Hui Zhu  <hui@codesourcery.com>
 
 	* breakpoint.c (build_target_command_list): Change loc->cond_bytecode
